--- a/m8-games/ship-adventure/ship-adventure.csproj
+++ b/m8-games/ship-adventure/ship-adventure.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="Markdown" Version="2.2.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="assets\" />
